# AI_Practice

./: .gitignore
Multi-agent-support-system/: pyproject.toml
Multi-agent-support-system/data/: finance_docs.txt  it_docs.txt
Multi-agent-support-system/src/: graph.py  main.py  state.py
Multi-agent-support-system/src/agents/: finance_agent.py  it_agent.py  supervisor.py
Multi-agent-support-system/src/tools/: file_tool.py  search_tool.py
RAG-CHATBOT/: .gitignore  app.py  ingest.py  requirements.txt
research-agent/: pyproject.toml  server.py
research-agent/data/googledocs/: insurance_portfolio.txt
research-agent/data/policies/: asset_policy.txt  hr_policy.txt  leave_policy.txt
research-agent/src/: config.py  graph.py  main.py  state.py
research-agent/src/agents/: prompts.py  research_agent.py  supervisor.py
research-agent/src/mcp_layer/: client.py
research-agent/src/mcp_layer/providers/: base_provider.py  google_docs_provider.py  mock_provider.py
research-agent/src/services/: vector_service.py
research-agent/src/tools/: mcp_tool.py  rag_tool.py  web_search_tool.py
research-agent/vector_store/: chroma.sqlite3
